complete html and css

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,5 +1,10 @@
-  /* hide element */
-.hide:hover .index3,
-.hide:focus .index3 {
-  opacity: 0;
+   /* Hides index3 (planner) until it is hovered over */
+.index3
+{
+    opacity: 0;
+}
+
+.index3:hover
+{
+   opacity: 1;
 }
