--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,10 +1,156 @@
    /* Hides index3 (planner) until it is hovered over */
 .index3
 {
-    opacity: 0;
+   display:none;
+    opacity: 1;
 }
-
-.index3:hover
+.index2
+{
+   display: none;
+   opacity:1;
+}
+/*.index3:hover
 {
    opacity: 1;
+}*/
+
+#container{ 
+   position: absolute; 
+   right:0;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             
+   width: 40%;
+   height: 25%;
+   /*box-shadow: 10px 10px 10px rgb(0, 0, 0, .1),
+               -10px -10px 10px rgb(255, 255, 255, 1),
+               inset 10px 10px 10px rgb(0, 0, 0, .1),
+               inset 10px 10px 10px rgb(255, 255, 255, 1);*/
+  
+   align-items: center;
+   justify-content: center;
+   display: flex;
+   border-radius: 10px;
+   border: #666;
+   border-style: double;
+}
+.calendar{
+  
+   width: 100%;
+   height: 100%;
+   background-color: lightgray;
+
+}
+.month{
+   
+   width: 100%;
+   height:5rem;
+   display:flex;
+   justify-content: space-evenly;
+   align-items:center;
+   padding:0 2rem;
+   background-color: rgb(178, 218, 238);
+   
+}
+.month .prev{
+   align-items: left;
+   padding-top: 10px;
+   cursor: pointer;
+   justify-content: space-between;
+}
+.month .next{
+   align-items: right;
+   padding-top: 10px;
+   cursor: pointer;
+}
+
+.month ul{
+   display:flex;
+   margin: 0;
+   padding: 0;
+  justify-content: space-between;
+  align-items: center;
+}
+​
+.month ul li{
+   color: white;
+   text-transform: uppercase;
+   font-size: 20px;
+   letter-spacing: 3px;
+   font-weight: 900;
+}
+ul{
+   list-style-type: none;
+}
+.month span{
+   align-items: center;
+}
+.weekdays{
+   margin: 0;
+   pad: 10px 0;
+   background-color: #ddd;
+   display: flex;
+   width: 100%;
+   color: #666;
+   height: 5rem;
+   align-items: center;
+   
+}
+.weekdays div{
+   display: flex;
+   justify-content: center;
+   width: calc(100%/7);
+   color: #666;
+   text-align: center;
+   letter-spacing: 0.1rem;
+}
+.days{
+   width:100%;
+   display: flex;
+   flex-wrap:wrap;
+   padding: 10px 0 ;
+   background-color: #eee;
+   margin: 0;
+   
+}
+.days div{
+   display:flex;
+   width: calc(100%/8);
+   text-align: center;
+   margin: 4px;
+   font-size: 15px;
+   color: black;
+   justify-content: center;
+   padding: 1px;
+
+}
+​.prev-dates{
+   color:#ddd;
+
+} 
+.next-days{
+   color:#ddd;
+}
+.todaysDate{
+   background: rgb(178, 218, 238);
+}
+.active{
+   padding: 5px;
+   background-color: #35403e;
+}
+
+@media screen and (max-width:720px) {
+   .weekdays li, .days li{
+       width: calc(100%/7);
+   }
+}
+@media screen and (max-width:420px) {
+   .weekdays li, .days li{
+       width: calc(100%/7);
+   }
+   .days li .active {
+       padding: 2px;
+   }
+}
+@media screen and (max-width:290px) {
+   .weekdays li, .days li{
+       width: calc(100%/7);
+   }
 }
