--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,13 +1,19 @@
    /* Hides index3 (planner) until it is hovered over */
-.index3
-{
+.index3 {
     opacity: 0;
 }
 
-.index3:hover
-{
+.index3:hover {
    opacity: 1;
 }
-#todo-count{
+
+#todo-count {
    display:none;
+}
+
+.bottom-right {
+   position: absolute;
+   bottom: 8px;
+   right: 16px;
+   font-size: 3em;
 }
